solc_ossfuzz_seed_corpus/test_sol/test_6bfe04f1e306768741abcf1616f799c26d0fd8a138be7851f8c6436655bc975a_33c50b79a22637ebc968b6e23f75cf89d350aaae_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0()  returns(bool o0,address o1,bool o2,bool o3)
{
  {
  }

  o2 = (7583331901158051451 < (9123270205803299124 | (2329758434935548473 * -7567742569260481295)));



  {


  }
  {
  }


}

==== Source: su1.sol ====
function f1(function () external i0,bool i1,function () external i2)  returns(bytes memory o0,function () external o1)
{
  {





{


  {


  }

}

  }
}
pragma abicoder v1;
pragma solidity >= 0.0.0;
// ----
// TypeError 2271: (su0.sol:78-168): Operator < not compatible with types int_const 7583331901158051451 and int_const -176...(31 digits omitted)...4147
